# rust-project-template

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: generic-checks.yml
app/src/: main.rs
libs/lib-example/src/: lib.rs
xtask/src/: main.rs
